--- a/css/estilo.css
+++ b/css/estilo.css
@@ -63,7 +63,7 @@ nav ul li a:hover {
 #conteudo {
     width: 710px;
     float: left;
-    background: green;
+    margin-bottom: 20px;
 }
 
 aside {
@@ -71,6 +71,7 @@ aside {
     float: right;
     background: #ebe7dd;
     padding-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 section#visita {
@@ -96,11 +97,52 @@ section#galeria img{
     margin-top: 2px;
 }
 
+article#video {
+    margin-left: 25px;
+}
+
+article#mapa {
+    margin-left: 37px;
+}
+
+article#exposicoes {
+    margin-left: 25px;
+    margin: 15px 0 0 25px;
+}
+
+article#historia {
+    margin-left: 25px;
+    margin: 15px 0 0 37px;
+}
+
+.conteudo-artigos {
+    float: left;
+    width: 310px;
+}
+
+h3 {
+    color: #227115;
+    font-size: 1em;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+}
+
 h4 {
     color: #86521a;
     text-transform: uppercase;
     padding-bottom: 3px;
     margin-bottom: 0px;
+}
+
+/*RODAPÉ*/
+footer {
+    padding: 20px 0 30px 0;
+    text-align: center;
+    background: url('../img/fundo-rodape.png') no-repeat center top;
+}
+
+footer>p a {
+    padding: 2px 10px;
 }
 
 /*FORMULARIOS*/
